// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchForm renders empty 1`] = `
<SearchForm
  accentColor="#00f"
  className=""
  communityName=""
  maxAllowed={10}
  maxNumOfTagsAdded={false}
  onAddTag={[Function]}
  onOpenSearch={[Function]}
  onSearch={[Function]}
  query=""
  searchResults={null}
>
  <SearchForm__Wrapper
    className=""
  >
    <div
      className="SearchForm__Wrapper-hq4lki-3 llMAec"
    >
      <SearchForm__Header>
        <div
          className="SearchForm__Header-hq4lki-4 gFcsdC"
        >
          <SearchForm__IconTag>
            <_default
              className="SearchForm__IconTag-hq4lki-0 eGhPaP"
            >
              <_default
                className="SearchForm__IconTag-hq4lki-0 eGhPaP"
              >
                <div
                  className="SearchForm__IconTag-hq4lki-0 eGhPaP"
                />
              </_default>
            </_default>
          </SearchForm__IconTag>
          Tag Wiki Pages
        </div>
      </SearchForm__Header>
      <SearchForm__AddTagButton
        accentColor="#00f"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="SearchForm__AddTagButton-hq4lki-5 jElxGg"
          disabled={false}
          onClick={[Function]}
        >
          Add Tag
          <SearchForm__IconAdd>
            <_default
              className="SearchForm__IconAdd-hq4lki-2 bmMlsQ"
            >
              <_default
                className="SearchForm__IconAdd-hq4lki-2 bmMlsQ"
              >
                <div
                  className="SearchForm__IconAdd-hq4lki-2 bmMlsQ"
                />
              </_default>
            </_default>
          </SearchForm__IconAdd>
        </button>
      </SearchForm__AddTagButton>
    </div>
  </SearchForm__Wrapper>
</SearchForm>
`;

exports[`SearchForm renders with props 1`] = `
<SearchForm
  accentColor="#00f"
  className="foo"
  communityName="bar"
  maxAllowed={3}
  maxNumOfTagsAdded={true}
  onAddTag={[Function]}
  onOpenSearch={[Function]}
  onSearch={[Function]}
  query="q"
  searchResults={
    Array [
      Object {
        "articleId": "1",
        "articleTitle": "Foo",
      },
      Object {
        "articleId": "2",
        "articleTitle": "Bar",
      },
      Object {
        "articleId": "3",
        "articleTitle": "FooBar",
      },
    ]
  }
>
  <SearchForm__Wrapper
    className="foo"
  >
    <div
      className="SearchForm__Wrapper-hq4lki-3 llMAec foo"
    >
      <SearchForm__Header>
        <div
          className="SearchForm__Header-hq4lki-4 gFcsdC"
        >
          <SearchForm__IconTag>
            <_default
              className="SearchForm__IconTag-hq4lki-0 eGhPaP"
            >
              <_default
                className="SearchForm__IconTag-hq4lki-0 eGhPaP"
              >
                <div
                  className="SearchForm__IconTag-hq4lki-0 eGhPaP"
                />
              </_default>
            </_default>
          </SearchForm__IconTag>
          Tag Wiki Pages
        </div>
      </SearchForm__Header>
      <SearchForm__AddTagButton
        accentColor="#00f"
        disabled={true}
        onClick={[Function]}
      >
        <button
          className="SearchForm__AddTagButton-hq4lki-5 jElxGg"
          disabled={true}
          onClick={[Function]}
        >
          Add Tag
          <SearchForm__IconAdd>
            <_default
              className="SearchForm__IconAdd-hq4lki-2 bmMlsQ"
            >
              <_default
                className="SearchForm__IconAdd-hq4lki-2 bmMlsQ"
              >
                <div
                  className="SearchForm__IconAdd-hq4lki-2 bmMlsQ"
                />
              </_default>
            </_default>
          </SearchForm__IconAdd>
        </button>
      </SearchForm__AddTagButton>
      <SearchForm__MaxTagsAdded>
        <div
          className="SearchForm__MaxTagsAdded-hq4lki-6 eAcFeE"
        >
          <SearchForm__IconAlert>
            <_default
              className="SearchForm__IconAlert-hq4lki-1 cybLiT"
            >
              <_default
                className="SearchForm__IconAlert-hq4lki-1 cybLiT"
              >
                <div
                  className="SearchForm__IconAlert-hq4lki-1 cybLiT"
                />
              </_default>
            </_default>
          </SearchForm__IconAlert>
          Maximum 3 tag
        </div>
      </SearchForm__MaxTagsAdded>
    </div>
  </SearchForm__Wrapper>
</SearchForm>
`;
